<resources>
    <string name="app_name">AnimeQuiz</string>
    <string name="characters">Personnages</string>
    <string name="mangas">Mangas</string>
    <string name="culture">Culture Jap</string>

    <string name="easy">Facile</string>
    <string name="medium">Moyen</string>
    <string name="hard">Difficile</string>
    <string name="index">%1$d/%2$d</string>
    <string name="game_placeholder">10</string>
    <string name="who_is">Qui est :</string>
    <string name="uzumaki_naruto">Uzumaki Naruto</string>
    <string name="clue">Indice</string>
    <string name="next">Passer</string>
    <string name="congrats">Félicitation !</string>
    <string name="game_over">Vous avez terminé le niveau !</string>
    <string name="characters_found">Nombre de personnages trouvés :</string>
    <string name="score">Score :</string>
    <string name="home">Accueil</string>
    <string name="ranking">Ranking</string>
    <string name="coming_soon">Bientôt disponible ! ;)</string>
</resources>