<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_page"
    android:id="@+id/parentContainer"
    tools:context=".CharacterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/index_background"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/index"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageOnigiri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageOnigiri" />

        <ImageView
            android:id="@+id/imageScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/trophy"
            app:layout_constraintBottom_toBottomOf="@+id/index"
            app:layout_constraintStart_toEndOf="@+id/score"
            app:layout_constraintTop_toTopOf="@+id/index" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/game_placeholder"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageScore" />

        <ImageView
            android:id="@+id/imageOnigiri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/onigiri_coin"
            app:layout_constraintBottom_toBottomOf="@+id/nbOnigiri"
            app:layout_constraintEnd_toStartOf="@+id/nbOnigiri"
            app:layout_constraintTop_toTopOf="@+id/nbOnigiri" />

        <TextView
            android:id="@+id/nbOnigiri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:text="@string/game_placeholder"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/questionBloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/question_background"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameInfo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/who_is"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/characterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/uzumaki_naruto"
            android:textColor="@color/character_name"
            android:textSize="22sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/clue_button"
        style="@style/GameButton"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/clue"
        app:icon="@drawable/idea"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionBloc"
        app:shapeAppearanceOverlay="@style/GameButtonRadius" />

    <Button
        android:id="@+id/next_button"
        style="@style/GameButton"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:drawableEnd="@drawable/next"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clue_button"
        app:layout_constraintTop_toBottomOf="@+id/questionBloc"
        app:shapeAppearanceOverlay="@style/GameButtonRadius" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/answerA"
        android:layout_marginTop="40dp"
        style="@style/EasyImage"
        android:src="@drawable/toramizu_ginta"
        app:layout_constraintEnd_toStartOf="@+id/answerB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clue_button"
        app:shapeAppearanceOverlay="@style/RoundedImage" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/answerB"
        android:layout_marginTop="40dp"
        style="@style/EasyImage"
        android:src="@drawable/kakashi_hatake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answerA"
        app:layout_constraintTop_toBottomOf="@+id/next_button"
        app:shapeAppearanceOverlay="@style/RoundedImage" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/answerC"
        android:layout_marginTop="20dp"
        style="@style/EasyImage"
        android:src="@drawable/uzumaki_naruto"
        app:layout_constraintEnd_toStartOf="@+id/answerD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerA"
        app:shapeAppearanceOverlay="@style/RoundedImage" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/answerD"
        android:layout_marginTop="20dp"
        style="@style/EasyImage"
        android:src="@drawable/namikaze_minato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answerC"
        app:layout_constraintTop_toBottomOf="@+id/answerB"
        app:shapeAppearanceOverlay="@style/RoundedImage" />
</androidx.constraintlayout.widget.ConstraintLayout>